media/qbittorrent/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: media
spec:
  parentRefs:
    - name: media
  hostnames:
    - qbittorrent.192.168.86.2.nip.io
  rules:
    - matches:
      backendRefs:
        - name: qbittorrent
          port: 8080
