media/qbittorrent/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-ingress-route
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`qbittorrent.192.168.86.2.nip.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: qbittorrent
          kind: Service
          port: 8080
