media/qbittorrent/temp-http.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: qbittorrent-temp
  namespace: media
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      port: 8000
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: qbittorrent-temp
  namespace: media
spec:
  parentRefs:
    - name: qbittorrent-temp
  hostnames:
    - qbittorrent.192.168.0.230.nip.io
  rules:
    - matches:
      backendRefs:
        - name: qbittorrent
          port: 8080
